# AI-Test-Project

./: CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt
main/include/feature_extractor/: feature_extractor.h
main/src/app_demo/: app_demo.cpp
main/src/classify_digit/: create_model.py
main/src/feature_extractor/: feature_extractor.cpp
src_main/: CMakeLists.txt
src_main/feature_classifier/: feature_classifier.cpp
src_main/feature_extractor/: feature_extractor.cpp
src_main/object_detector/: object_detector.cpp
util/: CMakeLists.txt
util/include/: feature_extractor.h
util/include/feature_extractor/: feature_extractor.h
util/src/feature_classifier/: feature_classifier.cpp
util/src/feature_extractor/: feature_extractor.cpp
util/src/object_detector/: object_detector.cpp
